--- a/todo-app/src/index.css
+++ b/todo-app/src/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
 }
